--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,8 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/node": "24.3.0",
+    "@types/react": "19.1.12",
     "eslint": "^9",
     "eslint-config-next": "15.5.0",
     "tailwindcss": "^4",
