--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "motion": "^12.23.12",
     "next": "15.5.0",
     "next-themes": "^0.4.6",
+    "qrcode.react": "^4.2.0",
     "react": "19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0",
